[gd_scene load_steps=7 format=3 uid="uid://bpw71rsl8qqjv"]

[ext_resource type="Texture2D" uid="uid://bfj04o304clea" path="res://World_map_placeholder.jpg" id="1_r63r8"]
[ext_resource type="Script" uid="uid://dvpsciytwaebh" path="res://world_map_function.gd" id="2_deu6t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_deu6t"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r63r8"]
bg_color = Color(1, 1, 1, 0.5529412)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ojr4"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vv781"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="WorldMap" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 298.0
offset_right = 824.0
offset_bottom = 646.0
texture = ExtResource("1_r63r8")
expand_mode = 1
script = ExtResource("2_deu6t")

[node name="ButtonLower" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -105.0
offset_top = -179.0
offset_right = 89.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_deu6t")
theme_override_styles/hover = SubResource("StyleBoxFlat_r63r8")
theme_override_styles/disabled = SubResource("StyleBoxFlat_4ojr4")
theme_override_styles/focus = SubResource("StyleBoxFlat_vv781")

[node name="ButtonRight" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -300.0
offset_right = 194.0
offset_bottom = -211.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_deu6t")
theme_override_styles/hover = SubResource("StyleBoxFlat_r63r8")
theme_override_styles/disabled = SubResource("StyleBoxFlat_4ojr4")
theme_override_styles/focus = SubResource("StyleBoxFlat_vv781")

[node name="ButtonLeft" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -179.0
offset_top = -301.0
offset_right = -12.0
offset_bottom = -212.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_deu6t")
theme_override_styles/hover = SubResource("StyleBoxFlat_r63r8")
theme_override_styles/disabled = SubResource("StyleBoxFlat_4ojr4")
theme_override_styles/focus = SubResource("StyleBoxFlat_vv781")

[node name="ButtonUp" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -43.0
offset_top = -426.0
offset_right = 64.0
offset_bottom = -365.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_deu6t")
theme_override_styles/hover = SubResource("StyleBoxFlat_r63r8")
theme_override_styles/disabled = SubResource("StyleBoxFlat_4ojr4")
theme_override_styles/focus = SubResource("StyleBoxFlat_vv781")

[connection signal="pressed" from="TextureRect/ButtonLower" to="TextureRect" method="lower_button_pressed"]
[connection signal="pressed" from="TextureRect/ButtonRight" to="TextureRect" method="right_button_pressed"]
[connection signal="pressed" from="TextureRect/ButtonLeft" to="TextureRect" method="left_button_pressed"]
[connection signal="pressed" from="TextureRect/ButtonUp" to="TextureRect" method="up_button_pressed"]
