extends TextureRect

	# move player / camera to that location on the map OR
	# load the room scene 
	# AND close the world map screen
func lower_button_pressed() -> void:
	pass # Replace with function body.


func right_button_pressed() -> void:
	pass # Replace with function body.


func left_button_pressed() -> void:
	pass # Replace with function body.


func up_button_pressed() -> void:
	pass # Replace with function body.
	
